podarilo sa mi urobit to, ze ked sa uzivatel dostane do technickych udajov (cez tlacidlo pridat technicke udaje)